--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -22,6 +22,7 @@
     --colorEnlace: #95c0fe;
     --colorEnlaceHover: #3486fd;
     --fondoCodigo: #345884;
+    --alturaCabecera: 70px;
 }
 
 @font-face {
